--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
+:root {
+    --color-primary: coral;
+    --color-secondary: cornflowerblue;
+    --color-white: white;
+    --color-black: black;
+}
 
+/* Adjektiv Styling */
+.text-center {
+    text-align: center;
+}
+
+.bg-primary {
+    background-color: var(--color-primary);
+}
+
+.bg-secondary {
+    background-color: var(--color-secondary);
+}
